# Robocode

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
CollBot/: CMakeLists.txt  CollBot.cpp  CollBot.hpp  CollBot.json  CollBot.sh
lib/: CMakeLists.txt
lib/coll-botapi/: CMakeLists.txt
lib/coll-botapi/include/coll-tankroyal-botapi/: Bot.hpp  BotInfo.hpp  BotResult.hpp  BotState.hpp  BulletState.hpp  Color.hpp  GameSetup.hpp
lib/coll-botapi/include/coll-tankroyal-botapi/events/: BotEvent.hpp  BotEvents.hpp  ConnectedEvent.hpp  ConnectionEvent.hpp  ConnectionEvents.hpp  Events.hpp  GameEvents.hpp  Messages.hpp
lib/coll-botapi/include/coll-tankroyal-botapi/internals/: BotEventHandler.hpp  BotInternals.hpp  EventConsumer.hpp  EventHandler.hpp
lib/coll-botapi/include/coll-tankroyal-botapi/message/: Message.hpp
lib/coll-botapi/src/: Bot.cpp  BotInfo.cpp
lib/coll-botapi/src/internals/: BotEventHandler.cpp  BotInternals.cpp
